# gbit

./: .gitignore  CMakeLists.txt  README.md
lib/: common.h  ref_cpu.c
python/: gbit.py
